// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FunctionCalls.sol - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress = veryVeryVeryLongSignature.popLast20Bytes();
    }

    function foo() {
      Voter you = Voter(1, true);

      Voter me = Voter({
          weight: 2,
          voted: abstain()
      });

      Voter airbnb = Voter({
        weight: 2,
        voted: true
      });
    }
    function verify(ForwardRequest calldata req, bytes calldata signature) public view returns (bool) {
    address signer =
        _hashTypedDataV1(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )
            ._hashTypedDataV2(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )._hashTypedDataV3(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )                .recover(signature);
    signer =
        _hashTypedDataV1(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )
            ._hashTypedDataV2(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )._hashTypedDataV3(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )                .recover(signature);
    return _nonces[req.from] == req.nonce && signer == req.from;
}
}

=====================================output=====================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress = veryVeryVeryLongSignature
            .popLast20Bytes();
    }

    function foo() {
        Voter you = Voter(1, true);

        Voter me = Voter({ weight: 2, voted: abstain() });

        Voter airbnb = Voter({ weight: 2, voted: true });
    }
    function verify(
        ForwardRequest calldata req,
        bytes calldata signature
    ) public view returns (bool) {
        address signer = _hashTypedDataV1(
            keccak256(
                abi.encode(
                    TYPEHASH,
                    req.from,
                    req.to,
                    req.value,
                    req.gas,
                    req.nonce,
                    keccak256(req.data)
                )
            )
        )
            ._hashTypedDataV2(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            ._hashTypedDataV3(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            .recover(signature);
        signer = _hashTypedDataV1(
            keccak256(
                abi.encode(
                    TYPEHASH,
                    req.from,
                    req.to,
                    req.value,
                    req.gas,
                    req.nonce,
                    keccak256(req.data)
                )
            )
        )
            ._hashTypedDataV2(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            ._hashTypedDataV3(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            .recover(signature);
        return _nonces[req.from] == req.nonce && signer == req.from;
    }
}

================================================================================
`;

exports[`FunctionCalls.sol - {"bracketSpacing":true} locations 1`] = `
SourceUnit 0-1537
  SourceUnitMembers 0-1537
    ContractDefinition 0-1536
      Identifier 9-22
      ContractSpecifiers 22-22
      ContractMembers 25-1535
        FunctionDefinition 29-138
          Identifier 38-41
          ParametersDeclaration 41-43
            Parameters 42-42
          FunctionAttributes 43-43
          Block 44-138
            Statements 46-133
              VariableDeclarationStatement 54-132
                AddressType 54-61
                Identifier 62-86
                VariableDeclarationValue 87-131
                  FunctionCallExpression 89-131
                    MemberAccessExpression 89-129
                      Identifier 89-114
                      Identifier 115-129
                    PositionalArgumentsDeclaration 129-131
                      PositionalArguments 130-130
        FunctionDefinition 144-363
          Identifier 153-156
          ParametersDeclaration 156-158
            Parameters 157-157
          FunctionAttributes 158-158
          Block 159-363
            Statements 161-358
              VariableDeclarationStatement 167-194
                IdentifierPath 167-172
                  Identifier 167-172
                Identifier 173-176
                VariableDeclarationValue 177-193
                  FunctionCallExpression 179-193
                    Identifier 179-184
                    PositionalArgumentsDeclaration 184-193
                      PositionalArguments 185-192
                        DecimalNumberExpression 185-186
                        TrueKeyword 188-192
              VariableDeclarationStatement 202-278
                IdentifierPath 202-207
                  Identifier 202-207
                Identifier 208-210
                VariableDeclarationValue 211-277
                  FunctionCallExpression 213-277
                    Identifier 213-218
                    NamedArgumentsDeclaration 218-277
                      NamedArgumentGroup 219-276
                        NamedArguments 221-269
                          NamedArgument 231-240
                            Identifier 231-237
                            DecimalNumberExpression 239-240
                          NamedArgument 252-268
                            Identifier 252-257
                            FunctionCallExpression 259-268
                              Identifier 259-266
                              PositionalArgumentsDeclaration 266-268
                                PositionalArguments 267-267
              VariableDeclarationStatement 286-357
                IdentifierPath 286-291
                  Identifier 286-291
                Identifier 292-298
                VariableDeclarationValue 299-356
                  FunctionCallExpression 301-356
                    Identifier 301-306
                    NamedArgumentsDeclaration 306-356
                      NamedArgumentGroup 307-355
                        NamedArguments 309-348
                          NamedArgument 317-326
                            Identifier 317-323
                            DecimalNumberExpression 325-326
                          NamedArgument 336-347
                            Identifier 336-341
                            TrueKeyword 343-347
        FunctionDefinition 368-1534
          Identifier 377-383
          ParametersDeclaration 383-438
            Parameters 384-437
              Parameter 384-411
                IdentifierPath 384-398
                  Identifier 384-398
                StorageLocation 399-407
                Identifier 408-411
              Parameter 413-437
                BytesKeyword 413-418
                StorageLocation 419-427
                Identifier 428-437
          FunctionAttributes 438-450
            PublicKeyword 439-445
            ViewKeyword 446-450
          ReturnsDeclaration 451-465
            ParametersDeclaration 459-465
              Parameters 460-464
                Parameter 460-464
                  BoolKeyword 460-464
          Block 466-1534
            Statements 468-1533
              VariableDeclarationStatement 472-971
                AddressType 472-479
                Identifier 480-486
                VariableDeclarationValue 487-970
                  FunctionCallExpression 497-970
                    MemberAccessExpression 497-959
                      FunctionCallExpression 497-935
                        MemberAccessExpression 497-810
                          FunctionCallExpression 497-793
                            MemberAccessExpression 497-668
                              FunctionCallExpression 497-638
                                Identifier 497-513
                                PositionalArgumentsDeclaration 513-638
                                  PositionalArguments 515-629
                                    FunctionCallExpression 527-628
                                      Identifier 527-536
                                      PositionalArgumentsDeclaration 536-628
                                        PositionalArguments 537-627
                                          FunctionCallExpression 537-627
                                            MemberAccessExpression 537-547
                                              Identifier 537-540
                                              Identifier 541-547
                                            PositionalArgumentsDeclaration 547-627
                                              PositionalArguments 548-626
                                                Identifier 548-556
                                                MemberAccessExpression 558-566
                                                  Identifier 558-561
                                                  Identifier 562-566
                                                MemberAccessExpression 568-574
                                                  Identifier 568-571
                                                  Identifier 572-574
                                                MemberAccessExpression 576-585
                                                  Identifier 576-579
                                                  Identifier 580-585
                                                MemberAccessExpression 587-594
                                                  Identifier 587-590
                                                  Identifier 591-594
                                                MemberAccessExpression 596-605
                                                  Identifier 596-599
                                                  Identifier 600-605
                                                FunctionCallExpression 607-626
                                                  Identifier 607-616
                                                  PositionalArgumentsDeclaration 616-626
                                                    PositionalArguments 617-625
                                                      MemberAccessExpression 617-625
                                                        Identifier 617-620
                                                        Identifier 621-625
                              Identifier 652-668
                            PositionalArgumentsDeclaration 668-793
                              PositionalArguments 670-784
                                FunctionCallExpression 682-783
                                  Identifier 682-691
                                  PositionalArgumentsDeclaration 691-783
                                    PositionalArguments 692-782
                                      FunctionCallExpression 692-782
                                        MemberAccessExpression 692-702
                                          Identifier 692-695
                                          Identifier 696-702
                                        PositionalArgumentsDeclaration 702-782
                                          PositionalArguments 703-781
                                            Identifier 703-711
                                            MemberAccessExpression 713-721
                                              Identifier 713-716
                                              Identifier 717-721
                                            MemberAccessExpression 723-729
                                              Identifier 723-726
                                              Identifier 727-729
                                            MemberAccessExpression 731-740
                                              Identifier 731-734
                                              Identifier 735-740
                                            MemberAccessExpression 742-749
                                              Identifier 742-745
                                              Identifier 746-749
                                            MemberAccessExpression 751-760
                                              Identifier 751-754
                                              Identifier 755-760
                                            FunctionCallExpression 762-781
                                              Identifier 762-771
                                              PositionalArgumentsDeclaration 771-781
                                                PositionalArguments 772-780
                                                  MemberAccessExpression 772-780
                                                    Identifier 772-775
                                                    Identifier 776-780
                          Identifier 794-810
                        PositionalArgumentsDeclaration 810-935
                          PositionalArguments 812-926
                            FunctionCallExpression 824-925
                              Identifier 824-833
                              PositionalArgumentsDeclaration 833-925
                                PositionalArguments 834-924
                                  FunctionCallExpression 834-924
                                    MemberAccessExpression 834-844
                                      Identifier 834-837
                                      Identifier 838-844
                                    PositionalArgumentsDeclaration 844-924
                                      PositionalArguments 845-923
                                        Identifier 845-853
                                        MemberAccessExpression 855-863
                                          Identifier 855-858
                                          Identifier 859-863
                                        MemberAccessExpression 865-871
                                          Identifier 865-868
                                          Identifier 869-871
                                        MemberAccessExpression 873-882
                                          Identifier 873-876
                                          Identifier 877-882
                                        MemberAccessExpression 884-891
                                          Identifier 884-887
                                          Identifier 888-891
                                        MemberAccessExpression 893-902
                                          Identifier 893-896
                                          Identifier 897-902
                                        FunctionCallExpression 904-923
                                          Identifier 904-913
                                          PositionalArgumentsDeclaration 913-923
                                            PositionalArguments 914-922
                                              MemberAccessExpression 914-922
                                                Identifier 914-917
                                                Identifier 918-922
                      Identifier 952-959
                    PositionalArgumentsDeclaration 959-970
                      PositionalArguments 960-969
                        Identifier 960-969
              ExpressionStatement 976-1467
                AssignmentExpression 976-1466
                  Identifier 976-982
                  FunctionCallExpression 993-1466
                    MemberAccessExpression 993-1455
                      FunctionCallExpression 993-1431
                        MemberAccessExpression 993-1306
                          FunctionCallExpression 993-1289
                            MemberAccessExpression 993-1164
                              FunctionCallExpression 993-1134
                                Identifier 993-1009
                                PositionalArgumentsDeclaration 1009-1134
                                  PositionalArguments 1011-1125
                                    FunctionCallExpression 1023-1124
                                      Identifier 1023-1032
                                      PositionalArgumentsDeclaration 1032-1124
                                        PositionalArguments 1033-1123
                                          FunctionCallExpression 1033-1123
                                            MemberAccessExpression 1033-1043
                                              Identifier 1033-1036
                                              Identifier 1037-1043
                                            PositionalArgumentsDeclaration 1043-1123
                                              PositionalArguments 1044-1122
                                                Identifier 1044-1052
                                                MemberAccessExpression 1054-1062
                                                  Identifier 1054-1057
                                                  Identifier 1058-1062
                                                MemberAccessExpression 1064-1070
                                                  Identifier 1064-1067
                                                  Identifier 1068-1070
                                                MemberAccessExpression 1072-1081
                                                  Identifier 1072-1075
                                                  Identifier 1076-1081
                                                MemberAccessExpression 1083-1090
                                                  Identifier 1083-1086
                                                  Identifier 1087-1090
                                                MemberAccessExpression 1092-1101
                                                  Identifier 1092-1095
                                                  Identifier 1096-1101
                                                FunctionCallExpression 1103-1122
                                                  Identifier 1103-1112
                                                  PositionalArgumentsDeclaration 1112-1122
                                                    PositionalArguments 1113-1121
                                                      MemberAccessExpression 1113-1121
                                                        Identifier 1113-1116
                                                        Identifier 1117-1121
                              Identifier 1148-1164
                            PositionalArgumentsDeclaration 1164-1289
                              PositionalArguments 1166-1280
                                FunctionCallExpression 1178-1279
                                  Identifier 1178-1187
                                  PositionalArgumentsDeclaration 1187-1279
                                    PositionalArguments 1188-1278
                                      FunctionCallExpression 1188-1278
                                        MemberAccessExpression 1188-1198
                                          Identifier 1188-1191
                                          Identifier 1192-1198
                                        PositionalArgumentsDeclaration 1198-1278
                                          PositionalArguments 1199-1277
                                            Identifier 1199-1207
                                            MemberAccessExpression 1209-1217
                                              Identifier 1209-1212
                                              Identifier 1213-1217
                                            MemberAccessExpression 1219-1225
                                              Identifier 1219-1222
                                              Identifier 1223-1225
                                            MemberAccessExpression 1227-1236
                                              Identifier 1227-1230
                                              Identifier 1231-1236
                                            MemberAccessExpression 1238-1245
                                              Identifier 1238-1241
                                              Identifier 1242-1245
                                            MemberAccessExpression 1247-1256
                                              Identifier 1247-1250
                                              Identifier 1251-1256
                                            FunctionCallExpression 1258-1277
                                              Identifier 1258-1267
                                              PositionalArgumentsDeclaration 1267-1277
                                                PositionalArguments 1268-1276
                                                  MemberAccessExpression 1268-1276
                                                    Identifier 1268-1271
                                                    Identifier 1272-1276
                          Identifier 1290-1306
                        PositionalArgumentsDeclaration 1306-1431
                          PositionalArguments 1308-1422
                            FunctionCallExpression 1320-1421
                              Identifier 1320-1329
                              PositionalArgumentsDeclaration 1329-1421
                                PositionalArguments 1330-1420
                                  FunctionCallExpression 1330-1420
                                    MemberAccessExpression 1330-1340
                                      Identifier 1330-1333
                                      Identifier 1334-1340
                                    PositionalArgumentsDeclaration 1340-1420
                                      PositionalArguments 1341-1419
                                        Identifier 1341-1349
                                        MemberAccessExpression 1351-1359
                                          Identifier 1351-1354
                                          Identifier 1355-1359
                                        MemberAccessExpression 1361-1367
                                          Identifier 1361-1364
                                          Identifier 1365-1367
                                        MemberAccessExpression 1369-1378
                                          Identifier 1369-1372
                                          Identifier 1373-1378
                                        MemberAccessExpression 1380-1387
                                          Identifier 1380-1383
                                          Identifier 1384-1387
                                        MemberAccessExpression 1389-1398
                                          Identifier 1389-1392
                                          Identifier 1393-1398
                                        FunctionCallExpression 1400-1419
                                          Identifier 1400-1409
                                          PositionalArgumentsDeclaration 1409-1419
                                            PositionalArguments 1410-1418
                                              MemberAccessExpression 1410-1418
                                                Identifier 1410-1413
                                                Identifier 1414-1418
                      Identifier 1448-1455
                    PositionalArgumentsDeclaration 1455-1466
                      PositionalArguments 1456-1465
                        Identifier 1456-1465
              ReturnStatement 1472-1532
                AndExpression 1479-1531
                  EqualityExpression 1479-1509
                    IndexAccessExpression 1479-1496
                      Identifier 1479-1486
                      MemberAccessExpression 1487-1495
                        Identifier 1487-1490
                        Identifier 1491-1495
                    MemberAccessExpression 1500-1509
                      Identifier 1500-1503
                      Identifier 1504-1509
                  EqualityExpression 1513-1531
                    Identifier 1513-1519
                    MemberAccessExpression 1523-1531
                      Identifier 1523-1526
                      Identifier 1527-1531
`;

exports[`FunctionCalls.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress = veryVeryVeryLongSignature.popLast20Bytes();
    }

    function foo() {
      Voter you = Voter(1, true);

      Voter me = Voter({
          weight: 2,
          voted: abstain()
      });

      Voter airbnb = Voter({
        weight: 2,
        voted: true
      });
    }
    function verify(ForwardRequest calldata req, bytes calldata signature) public view returns (bool) {
    address signer =
        _hashTypedDataV1(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )
            ._hashTypedDataV2(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )._hashTypedDataV3(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )                .recover(signature);
    signer =
        _hashTypedDataV1(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )
            ._hashTypedDataV2(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )._hashTypedDataV3(
            keccak256(abi.encode(TYPEHASH, req.from, req.to, req.value, req.gas, req.nonce, keccak256(req.data)))
        )                .recover(signature);
    return _nonces[req.from] == req.nonce && signer == req.from;
}
}

=====================================output=====================================
contract FunctionCalls {
    function foo() {
        address veryLongValidatorAddress = veryVeryVeryLongSignature
            .popLast20Bytes();
    }

    function foo() {
        Voter you = Voter(1, true);

        Voter me = Voter({weight: 2, voted: abstain()});

        Voter airbnb = Voter({weight: 2, voted: true});
    }
    function verify(
        ForwardRequest calldata req,
        bytes calldata signature
    ) public view returns (bool) {
        address signer = _hashTypedDataV1(
            keccak256(
                abi.encode(
                    TYPEHASH,
                    req.from,
                    req.to,
                    req.value,
                    req.gas,
                    req.nonce,
                    keccak256(req.data)
                )
            )
        )
            ._hashTypedDataV2(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            ._hashTypedDataV3(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            .recover(signature);
        signer = _hashTypedDataV1(
            keccak256(
                abi.encode(
                    TYPEHASH,
                    req.from,
                    req.to,
                    req.value,
                    req.gas,
                    req.nonce,
                    keccak256(req.data)
                )
            )
        )
            ._hashTypedDataV2(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            ._hashTypedDataV3(
                keccak256(
                    abi.encode(
                        TYPEHASH,
                        req.from,
                        req.to,
                        req.value,
                        req.gas,
                        req.nonce,
                        keccak256(req.data)
                    )
                )
            )
            .recover(signature);
        return _nonces[req.from] == req.nonce && signer == req.from;
    }
}

================================================================================
`;

exports[`FunctionCalls.sol locations 1`] = `
SourceUnit 0-1537
  SourceUnitMembers 0-1537
    ContractDefinition 0-1536
      Identifier 9-22
      ContractSpecifiers 22-22
      ContractMembers 25-1535
        FunctionDefinition 29-138
          Identifier 38-41
          ParametersDeclaration 41-43
            Parameters 42-42
          FunctionAttributes 43-43
          Block 44-138
            Statements 46-133
              VariableDeclarationStatement 54-132
                AddressType 54-61
                Identifier 62-86
                VariableDeclarationValue 87-131
                  FunctionCallExpression 89-131
                    MemberAccessExpression 89-129
                      Identifier 89-114
                      Identifier 115-129
                    PositionalArgumentsDeclaration 129-131
                      PositionalArguments 130-130
        FunctionDefinition 144-363
          Identifier 153-156
          ParametersDeclaration 156-158
            Parameters 157-157
          FunctionAttributes 158-158
          Block 159-363
            Statements 161-358
              VariableDeclarationStatement 167-194
                IdentifierPath 167-172
                  Identifier 167-172
                Identifier 173-176
                VariableDeclarationValue 177-193
                  FunctionCallExpression 179-193
                    Identifier 179-184
                    PositionalArgumentsDeclaration 184-193
                      PositionalArguments 185-192
                        DecimalNumberExpression 185-186
                        TrueKeyword 188-192
              VariableDeclarationStatement 202-278
                IdentifierPath 202-207
                  Identifier 202-207
                Identifier 208-210
                VariableDeclarationValue 211-277
                  FunctionCallExpression 213-277
                    Identifier 213-218
                    NamedArgumentsDeclaration 218-277
                      NamedArgumentGroup 219-276
                        NamedArguments 221-269
                          NamedArgument 231-240
                            Identifier 231-237
                            DecimalNumberExpression 239-240
                          NamedArgument 252-268
                            Identifier 252-257
                            FunctionCallExpression 259-268
                              Identifier 259-266
                              PositionalArgumentsDeclaration 266-268
                                PositionalArguments 267-267
              VariableDeclarationStatement 286-357
                IdentifierPath 286-291
                  Identifier 286-291
                Identifier 292-298
                VariableDeclarationValue 299-356
                  FunctionCallExpression 301-356
                    Identifier 301-306
                    NamedArgumentsDeclaration 306-356
                      NamedArgumentGroup 307-355
                        NamedArguments 309-348
                          NamedArgument 317-326
                            Identifier 317-323
                            DecimalNumberExpression 325-326
                          NamedArgument 336-347
                            Identifier 336-341
                            TrueKeyword 343-347
        FunctionDefinition 368-1534
          Identifier 377-383
          ParametersDeclaration 383-438
            Parameters 384-437
              Parameter 384-411
                IdentifierPath 384-398
                  Identifier 384-398
                StorageLocation 399-407
                Identifier 408-411
              Parameter 413-437
                BytesKeyword 413-418
                StorageLocation 419-427
                Identifier 428-437
          FunctionAttributes 438-450
            PublicKeyword 439-445
            ViewKeyword 446-450
          ReturnsDeclaration 451-465
            ParametersDeclaration 459-465
              Parameters 460-464
                Parameter 460-464
                  BoolKeyword 460-464
          Block 466-1534
            Statements 468-1533
              VariableDeclarationStatement 472-971
                AddressType 472-479
                Identifier 480-486
                VariableDeclarationValue 487-970
                  FunctionCallExpression 497-970
                    MemberAccessExpression 497-959
                      FunctionCallExpression 497-935
                        MemberAccessExpression 497-810
                          FunctionCallExpression 497-793
                            MemberAccessExpression 497-668
                              FunctionCallExpression 497-638
                                Identifier 497-513
                                PositionalArgumentsDeclaration 513-638
                                  PositionalArguments 515-629
                                    FunctionCallExpression 527-628
                                      Identifier 527-536
                                      PositionalArgumentsDeclaration 536-628
                                        PositionalArguments 537-627
                                          FunctionCallExpression 537-627
                                            MemberAccessExpression 537-547
                                              Identifier 537-540
                                              Identifier 541-547
                                            PositionalArgumentsDeclaration 547-627
                                              PositionalArguments 548-626
                                                Identifier 548-556
                                                MemberAccessExpression 558-566
                                                  Identifier 558-561
                                                  Identifier 562-566
                                                MemberAccessExpression 568-574
                                                  Identifier 568-571
                                                  Identifier 572-574
                                                MemberAccessExpression 576-585
                                                  Identifier 576-579
                                                  Identifier 580-585
                                                MemberAccessExpression 587-594
                                                  Identifier 587-590
                                                  Identifier 591-594
                                                MemberAccessExpression 596-605
                                                  Identifier 596-599
                                                  Identifier 600-605
                                                FunctionCallExpression 607-626
                                                  Identifier 607-616
                                                  PositionalArgumentsDeclaration 616-626
                                                    PositionalArguments 617-625
                                                      MemberAccessExpression 617-625
                                                        Identifier 617-620
                                                        Identifier 621-625
                              Identifier 652-668
                            PositionalArgumentsDeclaration 668-793
                              PositionalArguments 670-784
                                FunctionCallExpression 682-783
                                  Identifier 682-691
                                  PositionalArgumentsDeclaration 691-783
                                    PositionalArguments 692-782
                                      FunctionCallExpression 692-782
                                        MemberAccessExpression 692-702
                                          Identifier 692-695
                                          Identifier 696-702
                                        PositionalArgumentsDeclaration 702-782
                                          PositionalArguments 703-781
                                            Identifier 703-711
                                            MemberAccessExpression 713-721
                                              Identifier 713-716
                                              Identifier 717-721
                                            MemberAccessExpression 723-729
                                              Identifier 723-726
                                              Identifier 727-729
                                            MemberAccessExpression 731-740
                                              Identifier 731-734
                                              Identifier 735-740
                                            MemberAccessExpression 742-749
                                              Identifier 742-745
                                              Identifier 746-749
                                            MemberAccessExpression 751-760
                                              Identifier 751-754
                                              Identifier 755-760
                                            FunctionCallExpression 762-781
                                              Identifier 762-771
                                              PositionalArgumentsDeclaration 771-781
                                                PositionalArguments 772-780
                                                  MemberAccessExpression 772-780
                                                    Identifier 772-775
                                                    Identifier 776-780
                          Identifier 794-810
                        PositionalArgumentsDeclaration 810-935
                          PositionalArguments 812-926
                            FunctionCallExpression 824-925
                              Identifier 824-833
                              PositionalArgumentsDeclaration 833-925
                                PositionalArguments 834-924
                                  FunctionCallExpression 834-924
                                    MemberAccessExpression 834-844
                                      Identifier 834-837
                                      Identifier 838-844
                                    PositionalArgumentsDeclaration 844-924
                                      PositionalArguments 845-923
                                        Identifier 845-853
                                        MemberAccessExpression 855-863
                                          Identifier 855-858
                                          Identifier 859-863
                                        MemberAccessExpression 865-871
                                          Identifier 865-868
                                          Identifier 869-871
                                        MemberAccessExpression 873-882
                                          Identifier 873-876
                                          Identifier 877-882
                                        MemberAccessExpression 884-891
                                          Identifier 884-887
                                          Identifier 888-891
                                        MemberAccessExpression 893-902
                                          Identifier 893-896
                                          Identifier 897-902
                                        FunctionCallExpression 904-923
                                          Identifier 904-913
                                          PositionalArgumentsDeclaration 913-923
                                            PositionalArguments 914-922
                                              MemberAccessExpression 914-922
                                                Identifier 914-917
                                                Identifier 918-922
                      Identifier 952-959
                    PositionalArgumentsDeclaration 959-970
                      PositionalArguments 960-969
                        Identifier 960-969
              ExpressionStatement 976-1467
                AssignmentExpression 976-1466
                  Identifier 976-982
                  FunctionCallExpression 993-1466
                    MemberAccessExpression 993-1455
                      FunctionCallExpression 993-1431
                        MemberAccessExpression 993-1306
                          FunctionCallExpression 993-1289
                            MemberAccessExpression 993-1164
                              FunctionCallExpression 993-1134
                                Identifier 993-1009
                                PositionalArgumentsDeclaration 1009-1134
                                  PositionalArguments 1011-1125
                                    FunctionCallExpression 1023-1124
                                      Identifier 1023-1032
                                      PositionalArgumentsDeclaration 1032-1124
                                        PositionalArguments 1033-1123
                                          FunctionCallExpression 1033-1123
                                            MemberAccessExpression 1033-1043
                                              Identifier 1033-1036
                                              Identifier 1037-1043
                                            PositionalArgumentsDeclaration 1043-1123
                                              PositionalArguments 1044-1122
                                                Identifier 1044-1052
                                                MemberAccessExpression 1054-1062
                                                  Identifier 1054-1057
                                                  Identifier 1058-1062
                                                MemberAccessExpression 1064-1070
                                                  Identifier 1064-1067
                                                  Identifier 1068-1070
                                                MemberAccessExpression 1072-1081
                                                  Identifier 1072-1075
                                                  Identifier 1076-1081
                                                MemberAccessExpression 1083-1090
                                                  Identifier 1083-1086
                                                  Identifier 1087-1090
                                                MemberAccessExpression 1092-1101
                                                  Identifier 1092-1095
                                                  Identifier 1096-1101
                                                FunctionCallExpression 1103-1122
                                                  Identifier 1103-1112
                                                  PositionalArgumentsDeclaration 1112-1122
                                                    PositionalArguments 1113-1121
                                                      MemberAccessExpression 1113-1121
                                                        Identifier 1113-1116
                                                        Identifier 1117-1121
                              Identifier 1148-1164
                            PositionalArgumentsDeclaration 1164-1289
                              PositionalArguments 1166-1280
                                FunctionCallExpression 1178-1279
                                  Identifier 1178-1187
                                  PositionalArgumentsDeclaration 1187-1279
                                    PositionalArguments 1188-1278
                                      FunctionCallExpression 1188-1278
                                        MemberAccessExpression 1188-1198
                                          Identifier 1188-1191
                                          Identifier 1192-1198
                                        PositionalArgumentsDeclaration 1198-1278
                                          PositionalArguments 1199-1277
                                            Identifier 1199-1207
                                            MemberAccessExpression 1209-1217
                                              Identifier 1209-1212
                                              Identifier 1213-1217
                                            MemberAccessExpression 1219-1225
                                              Identifier 1219-1222
                                              Identifier 1223-1225
                                            MemberAccessExpression 1227-1236
                                              Identifier 1227-1230
                                              Identifier 1231-1236
                                            MemberAccessExpression 1238-1245
                                              Identifier 1238-1241
                                              Identifier 1242-1245
                                            MemberAccessExpression 1247-1256
                                              Identifier 1247-1250
                                              Identifier 1251-1256
                                            FunctionCallExpression 1258-1277
                                              Identifier 1258-1267
                                              PositionalArgumentsDeclaration 1267-1277
                                                PositionalArguments 1268-1276
                                                  MemberAccessExpression 1268-1276
                                                    Identifier 1268-1271
                                                    Identifier 1272-1276
                          Identifier 1290-1306
                        PositionalArgumentsDeclaration 1306-1431
                          PositionalArguments 1308-1422
                            FunctionCallExpression 1320-1421
                              Identifier 1320-1329
                              PositionalArgumentsDeclaration 1329-1421
                                PositionalArguments 1330-1420
                                  FunctionCallExpression 1330-1420
                                    MemberAccessExpression 1330-1340
                                      Identifier 1330-1333
                                      Identifier 1334-1340
                                    PositionalArgumentsDeclaration 1340-1420
                                      PositionalArguments 1341-1419
                                        Identifier 1341-1349
                                        MemberAccessExpression 1351-1359
                                          Identifier 1351-1354
                                          Identifier 1355-1359
                                        MemberAccessExpression 1361-1367
                                          Identifier 1361-1364
                                          Identifier 1365-1367
                                        MemberAccessExpression 1369-1378
                                          Identifier 1369-1372
                                          Identifier 1373-1378
                                        MemberAccessExpression 1380-1387
                                          Identifier 1380-1383
                                          Identifier 1384-1387
                                        MemberAccessExpression 1389-1398
                                          Identifier 1389-1392
                                          Identifier 1393-1398
                                        FunctionCallExpression 1400-1419
                                          Identifier 1400-1409
                                          PositionalArgumentsDeclaration 1409-1419
                                            PositionalArguments 1410-1418
                                              MemberAccessExpression 1410-1418
                                                Identifier 1410-1413
                                                Identifier 1414-1418
                      Identifier 1448-1455
                    PositionalArgumentsDeclaration 1455-1466
                      PositionalArguments 1456-1465
                        Identifier 1456-1465
              ReturnStatement 1472-1532
                AndExpression 1479-1531
                  EqualityExpression 1479-1509
                    IndexAccessExpression 1479-1496
                      Identifier 1479-1486
                      MemberAccessExpression 1487-1495
                        Identifier 1487-1490
                        Identifier 1491-1495
                    MemberAccessExpression 1500-1509
                      Identifier 1500-1503
                      Identifier 1504-1509
                  EqualityExpression 1513-1531
                    Identifier 1513-1519
                    MemberAccessExpression 1523-1531
                      Identifier 1523-1526
                      Identifier 1527-1531
`;
